changed the logic for anticipated page loading, plus some bugfixes after testing